🏢 Button & link styles

--- a/styles/Location.module.scss
+++ b/styles/Location.module.scss
@@ -44,7 +44,7 @@
   &.box {
     color: var(--blue-primary);
     border-color: var(--blue-hover);
-    background-color: var(--blue-background);
+    background-color: var(--blue-disabled);
   }
   &.grave {
     color: var(--grey-hover);
