--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -51,6 +51,8 @@
 
   --font: "Roboto", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  --code-font: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 html,
@@ -60,7 +62,37 @@ body {
   padding: 0;
   margin: 0;
   font-family: var(--font);
-  font-size: unset;
+  font-size: 16px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: var(--text-primary);
+  font-weight: 600;
+}
+
+h1 {
+  color: var(--text-primary);
+  font-size: 48px;
+}
+h2 {
+  color: var(--text-primary);
+  font-size: 36px;
+}
+h3 {
+  font-size: 28px;
+}
+
+p.large {
+  font-size: 20px;
 }
 
 a {
@@ -98,29 +130,6 @@ a {
     border-color: var(--text-disabled);
     color: var(--text-disabled);
   }
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  color: var(--text-primary);
-  font-weight: 600;
-}
-
-h1,
-h2 {
-  color: var(--text-primary);
-}
-
-h2 {
-  font-size: 2rem;
-}
-
-* {
-  box-sizing: border-box;
 }
 
 button {
