--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Teko:wght@300&family=Roboto:wght@400,600&display=swap");
+
 :root {
   --text-primary: #ffffff;
   --text-caption: #f8fafc9a;
