🏢 No more ant in EditEvent

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -374,6 +374,12 @@ input {
 
 //* ----------------------------------#07cf7f
 
+.jnpr-searchableSelect-optionContainer {
+  z-index: 999999999;
+}
+
+//* ----------------------------------#07cf7f
+
 .ant-modal-content {
   background-color: var(--background);
 
