--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -302,6 +302,15 @@ input {
   }
 }
 
+.tooltipContent {
+  background-color: var(--midnight-hover);
+  border-radius: 4px;
+  padding: 4px 8px;
+
+  flex-grow: 0;
+  width: max-content;
+}
+
 //* ----------------------------------#07cf7f
 
 .timelineItem {
