--- a/styles/Run.module.scss
+++ b/styles/Run.module.scss
@@ -12,6 +12,14 @@
   }
 }
 
+.tab {
+  @apply cursor-pointer;
+
+  &.selectedTab {
+    color: var(--yellow-primary);
+  }
+}
+
 .tabs {
   width: 100%;
 }
