🏢 Replace ant message with toast

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,6 +13,7 @@
   --midnight-primary: #0c2951;
   --midnight-primary50: #0c295185;
   --midnight-disabled: #0c29514d;
+  --toastify-color-dark: var(--midnight-hover);
 
   --pink-primary: #ec4899;
   --pink-hover: #f9a8d4;
