--- a/styles/Event.module.scss
+++ b/styles/Event.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  gap: 1rem;
+  gap: 0.5rem;
   height: 1.2rem;
 
   transition: color 0.2s;
@@ -10,11 +10,14 @@
   &:hover {
     color: var(--text-primary);
   }
-}
 
-.action {
-  display: none;
-  margin-top: -4px;
+  button.action {
+    display: none;
+    margin-top: -4px;
+    width: 28px;
+    height: 28px;
+    padding: 6px;
+  }
 }
 
 .container:hover .action {
