--- a/styles/juniper.scss
+++ b/styles/juniper.scss
@@ -59,6 +59,7 @@
     gap: 4px;
     margin: 0;
 
+    min-width: 200px;
     max-height: 256px;
     overflow-y: auto;
     overscroll-behavior-y: contain;
