🏢 Region specific backgrounds

--- a/styles/Timeline.module.scss
+++ b/styles/Timeline.module.scss
@@ -23,6 +23,7 @@
     }
     tr td {
       padding: 8px 12px;
+      transition: background 0.2s;
     }
     tr td:first-of-type {
       padding-left: 12px;
