--- a/styles/Run.module.scss
+++ b/styles/Run.module.scss
@@ -8,8 +8,7 @@
   width: 100vw;
   padding: 4rem 0;
 
-  background-image: linear-gradient(#071e3e7c, #071e3e 300px),
-    url("/Mossdeep.png");
+  background-image: linear-gradient(#071e3e7c, #071e3e 300px), url("/hoenn.png");
   background-position: top center;
   background-repeat: no-repeat;
   image-rendering: crisp-edges;
