--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,6 +4,17 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  background-image: linear-gradient(#071e3e7c, #071e3e 300px),
+    url("/sootopolis.png");
+  background-position: top center;
+  background-repeat: no-repeat;
+}
+
+@media only screen and (min-width: 1000px) {
+  .container {
+    background-size: 100% auto;
+  }
 }
 
 .main,
@@ -14,7 +25,7 @@
 }
 
 .main {
-  padding: 16rem 1rem 5rem;
+  padding: 12rem 1rem 5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -39,6 +50,7 @@
 
 .description {
   line-height: 1.5;
+  font-size: 1.1rem;
   color: var(--text-caption);
   font-weight: lighter;
   font-family: var(--code-font);
